examples/napi/tests/build_error_tests/reference_family_mutability.stderr
error[E0277]: the trait bound `napi::bindgen_prelude::Reference<u32>: DerefMut` is not satisfied
 --> tests/build_error_tests/reference_family_mutability.rs:8:22
  |
8 |   assert_deref_mut::<Reference<u32>>();
  |                      ^^^^^^^^^^^^^^ the trait `DerefMut` is not implemented for `napi::bindgen_prelude::Reference<u32>`
  |
note: required by a bound in `assert_deref_mut`
 --> tests/build_error_tests/reference_family_mutability.rs:5:24
  |
5 | fn assert_deref_mut<T: DerefMut>() {}
  |                        ^^^^^^^^ required by this bound in `assert_deref_mut`

error[E0277]: the trait bound `SharedReference<u32, u32>: DerefMut` is not satisfied
 --> tests/build_error_tests/reference_family_mutability.rs:9:22
  |
9 |   assert_deref_mut::<SharedReference<u32, u32>>();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `DerefMut` is not implemented for `SharedReference<u32, u32>`
  |
note: required by a bound in `assert_deref_mut`
 --> tests/build_error_tests/reference_family_mutability.rs:5:24
  |
5 | fn assert_deref_mut<T: DerefMut>() {}
  |                        ^^^^^^^^ required by this bound in `assert_deref_mut`

error[E0599]: no method named `get_mut` found for struct `WeakReference<T>` in the current scope
  --> tests/build_error_tests/reference_family_mutability.rs:12:23
   |
12 |     let _ = reference.get_mut();
   |                       ^^^^^^^ method not found in `WeakReference<u32>`
